--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "css-grid",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "",
   "main": "index.html",
   "scripts": {
-    "build-css": "node-sass -r app/scss -o app/public/css/",
-    "watch-css": "nodemon -e scss -x \"npm run build-css\""
+    "scss:build": "node-sass -r app/scss -o app/public/css/",
+    "scss:watch": "nodemon -e scss -x \"npm run scss:build\""
   },
   "author": "Julien Del Moral",
   "license": "MIT",
